Bug 1140284 - Start the resolver even when offline. r=ehsan, a=jocheng

--HG--
extra : transplant_source : %CC%5B%15%C9i%FF.%1Bo%F2%C3%B5%D7n%CDz%89%A7%F4%5B